# crew-camufox

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  README.md  SECURITY.md  __init__.py  enhanced_simple_runner.py  pyproject.toml  validate_open_source_setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml  code-quality.yml  dependency-check.yml  publish.yml
docs/: AUTO_SAVE_SYSTEM.md  ENHANCED_SEARCH_README.md  ML_INTEGRATION.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION.md  PHASE4_IMPLEMENTATION.md  TESTING_STRATEGY.md
docs/user/: configuration.md  examples.md  installation.md  quick-start.md
examples/: advanced_research.py  basic_research.py  enhanced_search_demo.py  ml_integration_demo.py
scripts/: dev.sh  run_tests.py  run_tests.sh  setup.sh
src/: demo_auto_save.py  main.py
src/agents/: __init__.py  coordination.py  deep_researcher.py  enhanced_deep_researcher.py  enhanced_multi_agent_orchestrator.py  final_writer.py  hierarchical_integration.py  hierarchical_integration_fixed.py  hierarchical_manager.py  integration_example.py  multi_agent_orchestrator.py  research_planner.py
src/async_utils/: __init__.py
src/browser/: __init__.py  anti_detection.py  camoufox_enhanced.py  camoufox_integration.py  camoufox_performance.py  captcha_solver.py  search_integration.py
src/collaboration/: __init__.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  database_manager.py  models.py  repository.py
src/error_handling/: __init__.py  fault_tolerance.py
src/memory/: MEMORY_DOCUMENTATION.md  __init__.py  agent_memory.py  memory_integration.py  memory_manager.py  memory_storage.py
src/ml/: __init__.py  ml_coordinator.py  pattern_recognition.py  query_optimizer.py  recommendation_engine.py  source_predictor.py
src/models/: __init__.py  research_models.py
src/monitoring/: __init__.py  crewai_monitor.py
src/templates/: __init__.py  research_templates.py  workflow_patterns.py
src/tools/: __init__.py  browser_search.py  content_extractor.py  simple_search.py
src/tools/composition/: DOCUMENTATION.md  README.md  __init__.py  integration.py  pipeline.py  search_pipeline.py  transformers.py
src/utils/: __init__.py  extract_outputs.py  helpers.py  logging.py  resilience.py
src/validation/: __init__.py  content_validator.py  research_validator.py  result_validator.py
src/verification/: __init__.py
src/workflows/: FLOWS_V2_DOCUMENTATION.md  __init__.py  enhanced_research_flow.py  flow_integration.py  flows_v2.py  validate_flows_v2.py
tests/: conftest.py
